--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
         <div class="tile__dimensions padding">
             <div class="input-block">
                 <button class="number-minus" type="button"
-                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
+                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();"></button>
                 <input value="10" min="0" type="number" id="tile-width" placeholder="Ширина" step="5" tabindex="1">
                 <button class="number-plus" type="button"
-                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
+                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();"></button>
                 <span>см</span>
             </div>
             <div class="input-block">
                 <button class="number-minus" type="button"
-                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
+                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();"></button>
                 <input value="20" min="0" type="number" id="tile-height" placeholder="Высота" step="5" tabindex="2">
                 <button class="number-plus" type="button"
-                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
+                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();"></button>
                 <span>см</span>
             </div>
             <div class="subtext">Площадь одной плитки <span id="one-tile-area">0.02</span> м²</div>
@@ -80,11 +80,11 @@
         <div class="tile__square">
             <div class="input-block">
                 <button class="number-minus" type="button"
-                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
+                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();"></button>
                 <input value="10" min="0" type="number" id="tile-area" tabindex="3"
                     placeholder="Введите нужную площадь">
                 <button class="number-plus" type="button"
-                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
+                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();"></button>
                 <span>m²</span>
             </div>
         </div>
@@ -92,11 +92,11 @@
         <div class="tile__amount padding">
             <div class="input-block">
                 <button class="number-minus" type="button"
-                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
+                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();"></button>
                 <input value="500" min="0" type="number" id="tile-num" tabindex="4"
                     placeholder="Нужное количество плитки">
                 <button class="number-plus" type="button"
-                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
+                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();"></button>
                 <span>шт</span>
             </div>
             <div class="subtext">Точная площадь <span id="tile-num-area">10</span> м²</div>
@@ -105,10 +105,10 @@
         <div class="tile__num-in-box padding">
             <div class="input-block">
                 <button class="number-minus" type="button"
-                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
+                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();"></button>
                 <input value="7" min="0" type="number" id="num-in-box" tabindex="5" placeholder="Плиток в пачке">
                 <button class="number-plus" type="button"
-                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
+                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();"></button>
                 <span>шт</span>
             </div>
             <div class="subtext">Площадь в пачке <span id="num-in-box-area">0.14</span> м²</div>
@@ -117,10 +117,10 @@
         <div class="tile__num-boxes">
             <div class="input-block">
                 <button class="number-minus" type="button"
-                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
+                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();"></button>
                 <input value="71" min="0" type="number" id="num-box" tabindex="6" placeholder="Нужно коробок">
                 <button class="number-plus" type="button"
-                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
+                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();"></button>
                 <span>шт</span>
             </div>
         </div>
@@ -128,10 +128,10 @@
         <div class="tile__boxes-plus">
             <div class="input-block">
                 <button class="number-minus" type="button"
-                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
+                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();"></button>
                 <input value="3" type="number" id="boxes-plus" tabindex="7" placeholder="И плиток">
                 <button class="number-plus" type="button"
-                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
+                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();"></button>
                 <span>шт</span>
             </div>
         </div>
