--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="subtext">Точная площадь <span id="tile-num-area">10</span> м²</div>
         </div>
-        <h2>Количество в одной пачке</h2>
+        <h2>Количество в пачке</h2>
         <div class="tile__num-in-box padding">
             <div class="input-block">
                 <button class="number-minus" type="button"
