--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();"></button>
                 <span>шт</span>
             </div>
-            <div class="subtext">Точна площа<span id="tile-num-area">10</span> м²</div>
+            <div class="subtext">Точна площа <span id="tile-num-area">10</span> м²</div>
         </div>
         <h2>Квлькість в упаковці</h2>
         <div class="tile__num-in-box padding">
@@ -111,7 +111,7 @@
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();"></button>
                 <span>шт</span>
             </div>
-            <div class="subtext">площа однієї упаковки<span id="num-in-box-area">0.14</span> м²</div>
+            <div class="subtext">площа упаковки <span id="num-in-box-area">0.14</span> м²</div>
         </div>
         <h2>Потрібно пачок</h2>
         <div class="tile__num-boxes">
