--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();"></button>
                 <span>см</span>
             </div>
-            <div class="subtext">Пооща однієї плитки <span id="one-tile-area">0.02</span> м²</div>
+            <div class="subtext">Площа однієї плитки <span id="one-tile-area">0.02</span> м²</div>
         </div>
         <h2>Потрібна площина</h2>
         <div class="tile__square">
