--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();"></button>
-                <input value="500" min="0" type="number" id="tile-num" tabindex="4"
-                    placeholder="Потрібно плитки">
+                <input value="500" min="0" type="number" id="tile-num" tabindex="4" placeholder="Потрібно плитки">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();"></button>
                 <span>шт</span>
@@ -111,7 +110,7 @@
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();"></button>
                 <span>шт</span>
             </div>
-            <div class="subtext">площа упаковки <span id="num-in-box-area">0.14</span> м²</div>
+            <div class="subtext">Площа упаковки <span id="num-in-box-area">0.14</span> м²</div>
         </div>
         <h2>Потрібно пачок</h2>
         <div class="tile__num-boxes">
