--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- Primary Meta Tags -->
 <title>Area calculation</title>
 <meta name="title" content="Area calculation">
-<meta name="description" content="Посчитай площадь удобно">
+<meta name="description" content="Підрахунок пллл">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
@@ -61,7 +61,7 @@
         <label for="roll"><input type="radio" value="roll" name="type" id="roll">Рулонные покрытия</label>
     </section> -->
     <section class="tile active">
-        <h3>Введите размеры плитки</h3>
+        <h3>Введіть розміри плитки</h3>
         <div class="tile__dimensions padding">
             <div class="input-block">
                 <button class="number-minus" type="button"
