--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- Primary Meta Tags -->
 <title>Area calculation</title>
 <meta name="title" content="Area calculation">
-<meta name="description" content="Підрахунок пллл">
+<meta name="description" content="Підрахунок площі">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
